# org-skin

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/org_skin/: __init__.py  cli.py
src/org_skin/aggregator/: __init__.py  analyzer.py  combiner.py  synthesizer.py
src/org_skin/aiml/: __init__.py  encoder.py  parser.py  templates.py
src/org_skin/chatbot/: __init__.py  bot.py  nlp.py  session.py
src/org_skin/db/: __init__.py  models.py  store.py  sync.py
src/org_skin/graphql/: __init__.py  client.py  mutations.py  queries.py
src/org_skin/mapper/: __init__.py  entities.py  graph.py  scanner.py
tests/: __init__.py  conftest.py  test_aiml.py  test_graphql.py  test_mapper.py
