[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org-skin"
version = "0.1.0"
description = "Org-wide SDK for GitHub API GraphQL workflows with AI/ML - Central hub mapping entire organization with AIML expression encoding"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SkinTwin AI", email = "dev@skintwin.ai" }
]
keywords = [
    "github",
    "graphql",
    "aiml",
    "sdk",
    "organization",
    "automation",
    "chatbot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gql[aiohttp]>=3.5.0",
    "aiohttp>=3.9.0",
    "python-aiml>=0.9.3",
    "networkx>=3.2",
    "click>=8.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
org-skin = "org_skin.cli:main"

[project.urls]
Homepage = "https://github.com/skintwin-ai/org-skin"
Repository = "https://github.com/skintwin-ai/org-skin"
Documentation = "https://github.com/skintwin-ai/org-skin/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/org_skin"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
